PollFD: autodeduce type of fd field

* glib/glibmm/main.[h|cc]: file descriptor to poll can be either of gint,
  or gint64 type, depending on the platform. glibmm should follow this
  rule as well.

https://bugzilla.gnome.org/show_bug.cgi?id=772074